@@ -366,3 +366,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 generalised data blocks.
 20070104 Makefile.am,tape_accessors.txt,tape_block.h,tzx_read.c: read data
 	 stream from generalised data blocks.
+20070104 internals.h,tape_block.c,tzx_read.c: free generalised block data
+	 on success (tested) and failure (not tested).
